[package]
name = "container-500"
version = "0.1.0"
edition = "2021"
authors = ["Filtoid <phil@electrocatstudios.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
log = "0.4.20"
simple_logger = "4.2.0"
